[package]
name = "sample14"
version = "0.1.0"
authors = ["t o <t.o@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros"]}
async-std = { version = "1.6.1", features = ["attributes"]}
async-trait = "0.1.48"
